[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "pyti"
version = "0.3.0"
description = "Technical Indicator Library"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.TXT"]
authors = [
    { name = "Kyle Justice Magnuson", email = "mags.kjm@gmail.com" },
]
keywords = ["financial", "technical", "indicator", "functions"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
]

[project.urls]
Homepage = "https://github.com/kylejusticemagnuson/pyti"

[dependency-groups]
dev = [
    "pytest",
    "pandas",
]

[tool.setuptools.packages.find]
include = ["pyti"]

[tool.pytest.ini_options]
testpaths = ["tests"]
